# mpl-candy-machine

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/: .env  file-filters.yml
.github/workflows/: build-programs.yml  deploy-js.yml  deploy-program.yml  main.yml  test-js.yml  test-programs.yml
clients/js/: .eslintrc.js  .prettierrc.json  CONTRIBUTING.md  README.md  fixup.sh  package.json  pnpm-lock.yaml  tsconfig-base.json  tsconfig-cjs.json  tsconfig-test-cjs.json  tsconfig-test.json  tsconfig.base.json  tsconfig.cjs.json  tsconfig.json
clients/js-solita-candy-guard/: .ammanrc.js  .prettierrc.js  .solitarc.js  package.json  run-test.sh  tsconfig.json
clients/js-solita-candy-guard/idl/: candy_guard.json
clients/js-solita-candy-guard/src/: parser.ts
clients/js-solita-candy-guard/test/: initialize.test.ts  mint-v2.test.ts  mint.test.ts  route.test.ts  set-authority.test.ts  update.test.ts  withdraw.test.ts
clients/js-solita-candy-machine-core/: .solitarc.js  package.json  tsconfig.json
clients/js-solita-candy-machine-core/idl/: candy_machine_core.json
clients/js-solita-candy-machine-core/test/: mint-v2.test.ts  withdraw.test.ts
clients/js/src/: constants.ts  create.ts  createCandyGuard.ts  createCandyMachine.ts  createCandyMachineV2.ts  createGumballGuard.ts  createGumballMachine.ts  createLutForCandyMachine.ts  createLutForGumballMachine.ts  createLutForTransactionBuilder.ts  createMint.ts  createToken.ts  createV2CandyMachine.ts  draw.ts  errors.ts  fetchTokensByOwner.ts  findLargestTokensByMint.ts  getCandyMachineRuleSet.ts  index.ts  merkle.ts  mint.ts  mintV2.ts  plugin.ts  route.ts  settleCoreAssetSale.ts  settleNftSale.ts  updateCandyGuard.ts  updateGumballGuard.ts
clients/js/test/: _setup.ts  addConfigLines.test.ts  addCoreAsset.test.ts  addMemo.test.ts  addNft.test.ts  claimCoreAsset.test.ts  claimCoreAsset.ts  claimNft.test.ts  create.test.ts  createCandyGuard.test.ts  createCandyMachine.test.ts  createCandyMachineV2.test.ts  createGumballGuard.test.ts  createGumballMachine.test.ts  createLutForCandyMachine.test.ts  createLutForGumballMachine.test.ts  createV2CandyMachine.test.ts  delete.test.ts  deleteCandyGuard.test.ts  deleteCandyMachine.test.ts  deleteGumballGuard.test.ts  deleteGumballMachine.test.ts  draw.test.ts  drawFromCandyMachine.test.ts  drawFromGumballMachine.test.ts  example.test.ts  getCandyMachineRuleSet.test.ts  initializeCandyMachine.test.ts  initializeCandyMachineV2.test.ts  initializeGumballMachine.test.ts  initializeV2CandyMachine.test.ts  mint.test.ts  mintFromCandyMachine.test.ts  mintFromCandyMachineV2.test.ts  mintV1.test.ts  (+19 more)
configs/: kinobi.cjs  shank.cjs  validator.cjs  validator.devnet.cjs  validator.mainnet.cjs
configs/program-scripts/: build.sh  dump.sh  test.sh
configs/visitors/: TransformDefinedTypesIntoAccountsVisitor.cjs
idls/: candy_guard.json  candy_machine_core.json  mallow_gumball.json
programs/candy-guard/: Anchor.toml  Cargo.toml  README.md
programs/candy-guard/macro/: Cargo.toml
programs/candy-guard/macro/src/: lib.rs
programs/candy-guard/program/: Cargo.toml
programs/candy-guard/program/src/: errors.rs  lib.rs  utils.rs
programs/candy-guard/program/src/guards/: address_gate.rs  allocation.rs  allow_list.rs  bot_tax.rs  end_date.rs  freeze_sol_payment.rs  freeze_token_payment.rs  gatekeeper.rs  inscription.rs  mint_limit.rs  mod.rs  nft_burn.rs  nft_gate.rs  nft_payment.rs  peer_guard.rs  program_gate.rs  redeemed_amount.rs  sol_payment.rs  start_date.rs  third_party_signer.rs  token2022_payment.rs  token_burn.rs  token_gate.rs  token_payment.rs
programs/candy-guard/program/src/instructions/: close_gumball_machine.rs  draw.rs  initialize.rs  mint.rs  mint_v2.rs  mod.rs  route.rs  set_authority.rs  unwrap.rs  update.rs  withdraw.rs  wrap.rs
programs/candy-guard/program/src/state/: candy_guard.rs  gumball_guard.rs  mod.rs
programs/candy-machine-core/: Anchor.toml  README.md  release.toml  rustfmt.toml
programs/candy-machine-core/program/: Cargo.toml
programs/candy-machine-core/program/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/candy-machine-core/program/src/events/: claim_item_event.rs  mod.rs  settle_item_sale_event.rs  settle_sale_event.rs
programs/candy-machine-core/program/src/instructions/: add_config_lines.rs  add_core_asset.rs  add_nft.rs  claim_core_asset.rs  claim_nft.rs  close_gumball_machine.rs  draw.rs  end_sale.rs  increment_total_revenue.rs  initialize.rs  initialize_v2.rs  mint.rs  mint_v2.rs  mod.rs  remove_core_asset.rs  remove_nft.rs  set_authority.rs  set_collection.rs  set_collection_v2.rs  set_token_standard.rs  settle_core_asset_sale.rs  settle_item_sale.rs  settle_nft_sale.rs  start_sale.rs  update.rs  update_settings.rs
programs/candy-machine-core/program/src/processors/: add_config_line.rs  add_config_lines.rs  add_item.rs  claim_proceeds.rs  mod.rs  remove_config_line.rs  remove_item.rs
programs/candy-machine-core/program/src/state/: candy_machine.rs  candy_machine_data.rs  gumball_machine.rs  mod.rs  seller_history.rs
programs/mallow-gumball/: Anchor.toml  README.md
programs/mallow-gumball/program/: Cargo.toml
programs/mallow-gumball/program/src/: errors.rs  lib.rs  utils.rs
programs/mallow-gumball/program/src/events/: draw_item_event.rs  mod.rs  settle_item_sale_event.rs
programs/mallow-gumball/program/src/instructions/: claim_core_asset.rs  claim_nft.rs  close_gumball_machine.rs  draw.rs  increment_total_revenue.rs  initialize.rs  mod.rs  remove_core_asset.rs  remove_nft.rs  set_mint_authority.rs  settle_core_asset_sale.rs  settle_nft_sale.rs  start_sale.rs  update_settings.rs
programs/mallow-gumball/program/src/processors/: add_item.rs  claim_core_asset.rs  claim_item.rs  claim_nft.rs  claim_proceeds.rs  mod.rs  remove_item.rs
programs/mallow-gumball/program/src/state/: gumball_machine.rs
programs/utils/: Cargo.toml
programs/utils/src/: checks.rs  error.rs  lib.rs  math.rs  royalties.rs  transfer.rs
programs/utils/src/core/: attributes.rs  mod.rs  royalties.rs
(+114 files in other folders)
