[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]
name = "utils"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = {version = "0.29.0"}
solana-program = ">=1.18.2"
spl-token = ">=3.5.0"
spl-associated-token-account = {version = ">=1.0.0", features = ["no-entrypoint"]}
mpl-token-metadata = "3.2.1"
mpl-core = { version= ">=0.7.0"}