[package]
name = "mpl-candy-guard-derive"
version = "0.2.0"
edition = "2021"
description = "Procedural macro for automating the implementation of Metaplex Gumball Guard."
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-candy-guard"
license-file = "../LICENSE"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.98", features = ["extra-traits"] }
quote = "1.0.20"
