[package]
name = "mpl-candy-machine-core"
version = "3.0.1"
description = "NFT Candy Machine Core: programmatic and trustless NFT drops."
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-candy-machine"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
arrayref = ">=0.3.6"
mpl-token-metadata = "3.2.1"
solana-program = ">=1.17.6"
spl-token = ">=3.5.0"
spl-associated-token-account = {version = ">=1.0.0", features = ["no-entrypoint"]}
