[package]
name = "mpl-candy-machine-core"
version = "3.0.1"
description = "NFT Candy Machine Core: programmatic and trustless NFT drops."
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-candy-machine"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
arrayref = "0.3.6"
mpl-token-metadata = "3.2.1"
mpl-utils = { version = "0.3", default-features = false }
solana-program = "1.18.26"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
