[package]
name = "mallow-gumball"
version = "0.1.0"
description = "mallow Gumball: collaborative random sales of existing NFTs."
authors = ["Mallow Developers <dev@mallow.art>"]
repository = "https://github.com/mallow-labs/mallow-gumball"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed", "event-cpi"]}
arrayref = ">=0.3.6"
mpl-token-metadata = "3.2.1"
solana-program = ">=1.18.2"
spl-token = ">=3.5.0"
spl-associated-token-account = {version = ">=1.0.0", features = ["no-entrypoint"]}
mpl-core = { version= ">=0.7.0"}
utils = { path="../../utils" }